--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,8 @@
   <!-- Styles -->
   <style type="text/css">
     {% include main.css %}
+    {% include css/songroger/index.css %}
+    {% include css/songroger/gff.css %}
   </style>
 
 </head>
