--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,9 @@ layout: default
     </a>
   </div>
 </div>
-
+<p id="back-to-top"><a href="#top"><img src="/img/top.png"/></a></p>
+<script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="/js/top.js"></script>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
