--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,5 @@
-  </main>
-
-  <footer class="footer">
-    <div class="col">
-      Copyright © 2014-2016 Songroger | <a href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a>
-    </div>
-  </footer>
+<footer class="footer">
+	<div class="col">
+		Copyright © 2014-2016 Songroger | <a href="{{ "/feed.xml" | prepend: site.baseurl }}" class="subscribe">Subscribe via RSS</a>
+	</div>
+</footer>
