--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,15 +24,16 @@ layout: default
         <title>Facebook Icon</title>
         <path d="M9.5 3L12 3 12 0 9.5 0C7.6 0 6 1.6 6 3.5L6 5 4 5 4 8 6 8 6 16 9 16 9 8 11.5 8 12 5 9 5 9 3.5C9 3.2 9.2 3 9.5 3L9.5 3Z"/>
       </svg>
-      Share
+      Facebook
     </a>
   </div>
 </div>
+<hr>
 <p id="back-to-top"><a href="#top"><img src="/img/top.png"/></a></p>
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 <script src="/js/top.js"></script>
 
-<!-- disqus -->
+<!-- disqus 评论-->
 <!-- <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
