--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<div class="col">
-		Copyright © 2014-2016 Songroger | <a href="{{ "/feed.xml" | prepend: site.baseurl }}" class="subscribe">Subscribe via RSS</a>
+		© 2014-2016 Songroger | <a href="{{ "/feed.xml" | prepend: site.baseurl }}" class="subscribe">RSS</a>
 	</div>
 </footer>
