--- a/_includes/css/songroger/index.css
+++ b/_includes/css/songroger/index.css
@@ -22,3 +22,8 @@
 .block__item .btn {
   box-shadow: inset 0 0 0 0px #1565c0;
 }
+
+/* line 30, ../../../_sass/songroger/index.scss */
+.footer .col {
+  text-align: center;
+}
