--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
 
     {% if page.title %}
       <div class="header__logo">
-        <a href="{{ site.baseurl }}/" class="header__link header__link--logo" title="{{ site.title }}">{{ site.title }}</a>
+        <a href="{{ site.baseurl }}/" class="header__link header__link--logo" title="{{ site.title }}">
+        <img src="/photos/avatar.jpg" style="display:initial;width:30px;height:30px;vertical-align:middle;">{{ site.title }}</a>
       </div>
     {% else %}
       <h1 class="header__logo">
