--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
   <header class="header">
 
-    {% if page.title %}
+    {% if site.title %}
       <div class="header__logo">
         <a href="{{ site.baseurl }}/" class="header__link header__link--logo" title="{{ site.title }}">
         <img src="/photos/avatar.jpg" style="display:initial;width:30px;height:30px;vertical-align:middle;">{{ site.title }}</a>
