--- a/_includes/css/songroger/index.css
+++ b/_includes/css/songroger/index.css
@@ -1,35 +1,41 @@
 /* line 5, ../../../_sass/songroger/index.scss */
+a:hover, a:visited, a:active {
+  color: #444;
+  text-decoration: none;
+}
+
+/* line 10, ../../../_sass/songroger/index.scss */
 .article__more {
   color: #999;
 }
-/* line 7, ../../../_sass/songroger/index.scss */
+/* line 12, ../../../_sass/songroger/index.scss */
 .article__more:hover {
   color: #444;
   text-decoration: none;
 }
 
-/* line 13, ../../../_sass/songroger/index.scss */
+/* line 18, ../../../_sass/songroger/index.scss */
 .subscribe {
   color: #999;
 }
-/* line 15, ../../../_sass/songroger/index.scss */
+/* line 20, ../../../_sass/songroger/index.scss */
 .subscribe:hover {
   color: #444;
   text-decoration: none;
 }
 
-/* line 21, ../../../_sass/songroger/index.scss */
+/* line 26, ../../../_sass/songroger/index.scss */
 .blocks {
   display: flex;
   margin-bottom: 0;
 }
 
-/* line 27, ../../../_sass/songroger/index.scss */
+/* line 32, ../../../_sass/songroger/index.scss */
 .block__item .btn {
   box-shadow: inset 0 0 0 0px #1565c0;
 }
 
-/* line 33, ../../../_sass/songroger/index.scss */
+/* line 38, ../../../_sass/songroger/index.scss */
 .footer .col {
   text-align: center;
 }
