--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
       <a href="{{ site.baseurl }}/about/" class="header__link" title="About">About</a>
       <a href="{{ site.baseurl }}/archive/" class="header__link" title="Archive">Archive</a>
       <a href="http://twitter.com/{{ site.twitter_username }}" class="header__link" title="Songroger on Twitter" target="_blank">Twitter</a>
-      <a href="http://github.com/{{ site.github_username }}" class="header__link" title="Songroger's Github" target="_blank">Github</a>
+      <!-- <a href="http://github.com/{{ site.github_username }}" class="header__link" title="Songroger's Github" target="_blank">Github</a> -->
       <a href="http://facebook.com/{{ site.facebook_username }}" class="header__link" title="Songroger on Facebook" target="_blank">Facebook</a>
     </nav>
   </header>
