--- a/_includes/css/songroger/index.css
+++ b/_includes/css/songroger/index.css
@@ -35,7 +35,11 @@ a:hover, a:visited, a:active {
   box-shadow: inset 0 0 0 0px #1565c0;
 }
 
-/* line 38, ../../../_sass/songroger/index.scss */
+/* line 37, ../../../_sass/songroger/index.scss */
+.footer {
+  margin-top: 0.5rem;
+}
+/* line 39, ../../../_sass/songroger/index.scss */
 .footer .col {
   font-size: 13px;
   text-align: center;
