--- a/_sass/songroger/index.scss
+++ b/_sass/songroger/index.scss
@@ -7,6 +7,10 @@ a:hover, a:visited, a:active {
     text-decoration: none;
 }
 
+.cover {
+	margin-bottom: 20px;
+}
+
 .article__more {
 	color:#999;
     &:hover {
