--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
   <header class="header">
 
-    {% if site.title %}
+    {% if site.avatar %}
       <div class="header__logo">
         <a href="{{ site.baseurl }}/" class="header__link header__link--logo" title="{{ site.title }}">
         <img src="{{ site.avatar }}" style="display:initial;width:30px;height:30px;vertical-align:middle;">{{ site.title }}</a>
@@ -12,11 +12,11 @@
     {% endif %}
 
     <nav class="header__nav" role="navigation">
-      <a href="{{ site.baseurl }}/about/" class="header__link" title="About">About</a>
-      <a href="{{ site.baseurl }}/archive/" class="header__link" title="Archive">Archive</a>
-      <a href="http://twitter.com/{{ site.twitter_username }}" class="header__link" title="Songroger on Twitter" target="_blank">Twitter</a>
-      <!-- <a href="http://github.com/{{ site.github_username }}" class="header__link" title="Songroger's Github" target="_blank">Github</a> -->
-      <a href="http://facebook.com/{{ site.facebook_username }}" class="header__link" title="Songroger on Facebook" target="_blank">Facebook</a>
+      <a href="{{ site.baseurl }}/about/" class="header__link">About</a>
+      <a href="{{ site.baseurl }}/archive/" class="header__link">Archive</a>
+      <a href="http://twitter.com/{{ site.twitter_username }}" class="header__link" target="_blank">Twitter</a>
+      <!-- <a href="http://github.com/{{ site.github_username }}" class="header__link" target="_blank">Github</a> -->
+      <a href="http://facebook.com/{{ site.facebook_username }}" class="header__link" target="_blank">Facebook</a>
     </nav>
   </header>
 
