--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     {% if site.avatar %}
       <div class="header__logo">
         <a href="{{ site.baseurl }}/" class="header__link header__link--logo" title="{{ site.title }}">
-        <img src="{{ site.avatar }}" style="display:initial;width:30px;height:30px;vertical-align:middle;"></a>
+        <img src="{{ site.avatar }}" style="display:initial;width:30px;height:30px;vertical-align:middle;border-radius:15px;"></a>
       </div>
     {% else %}
       <h1 class="header__logo">
