--- a/_sass/songroger/index.scss
+++ b/_sass/songroger/index.scss
@@ -38,6 +38,11 @@ a:hover, a:visited, a:active {
 	}
 }
 
+.post-tags{
+	text-align: right;
+	font: italic bold 12px/30px Georgia, serif;
+}
+
 .footer {
 	margin-top: 0.5rem;
 	.col {
