--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@ layout: default
     </div>
   {% endif %}
   {{ content }}
+  {% if page.tail %}
+    <div class="post-tags">{{ page.tail }}</div>
+  {% endif %}
 </article>
 
 <div class="blocks">
