--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
 <hr>
 <p id="back-to-top"><a href="#top"><img src="/img/top.png"/></a></p>
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
-<script src="/js/top.js"></script>
+<script src="http://7xof48.com1.z0.glb.clouddn.com/songroger/top.js"></script>
 
 <!-- disqus 评论-->
 <!-- <div id="disqus_thread"></div>
