--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,6 @@
 {{ content }}
 
 {% include footer.html %}
-
+<script src="http://s95.cnzz.com/z_stat.php?id=1260641879&web_id=1260641879" language="JavaScript"></script>
 </body>
 </html>
