--- a/_src/css/modules/_article.css
+++ b/_src/css/modules/_article.css
@@ -27,5 +27,10 @@
 }
 
 .article__more {
-  text-decoration:none;
+  color: var(--color2);
+  text-decoration: none;
+  &:hover {
+      color: var(--color-text);
+      text-decoration: none;
+    }
 }
