--- a/_src/css/modules/_blocks.css
+++ b/_src/css/modules/_blocks.css
@@ -2,6 +2,12 @@
   display: flex;
   align-items: center;
   margin-bottom: 3.2rem;
+  a {
+  	color: var(--color2);
+  	&:hover {
+      color: var(--color-text);
+    }
+  }
 }
 
 .blocks--space {
