--- a/_src/css/modules/_btn.css
+++ b/_src/css/modules/_btn.css
@@ -22,8 +22,11 @@
   left: -4px;
   width: 18px;
   height: 18px;
-  fill: var(--color1);
+  fill: var(--color2);
   margin-right: .6rem;
   transition: fill 100ms;
+  &:hover {
+      color: var(--color1);
+    }
 }
 
