--- a/_src/css/main.css
+++ b/_src/css/main.css
@@ -6,6 +6,6 @@
 @import '_layout.css';
 @import '_modules.css';
 @import '_syntax-highlighting.css';
-@import '../../_includes/css/songroger/gff.css';
-@import '../../_includes/css/songroger/index.css';
+/*@import '../../_includes/css/songroger/gff.css';*/
+/*@import '../../_includes/css/songroger/index.css';*/
 /*@import '../../_includes/main.css';*/
