--- a/_src/css/modules/_footer.css
+++ b/_src/css/modules/_footer.css
@@ -1,5 +1,18 @@
 .footer {
-  margin-top: 3.2rem;
+  margin-top: 0.5rem;
   padding: 1.6rem 0;
   box-shadow: inset 0 1px 0 var(--color-border);
+  .col {
+	  font-size: 13px;
+	  text-align: center;
+  }
 }
+
+.subscribe {
+  color: var(--color2);
+  &:hover {
+      color: var(--color-text);
+      text-decoration: none;
+    }
+}
+
