--- a/_src/css/modules/_blocks.css
+++ b/_src/css/modules/_blocks.css
@@ -1,13 +1,7 @@
 .blocks {
   display: flex;
   align-items: center;
-  margin-bottom: 3.2rem;
-  a {
-  	color: var(--color2);
-  	&:hover {
-      color: var(--color-text);
-    }
-  }
+  margin-bottom: 0.1rem;
 }
 
 .blocks--space {
@@ -16,4 +10,17 @@
 
 .block__item--mr {
   margin-right: .8rem;
+}
+
+.blocks__item {
+  a {
+    text-decoration: none;
+    color: var(--color2);
+    &:hover {
+      color: var(--color-text);
+    }
+  }
+  .btn {
+    box-shadow: inset 0 0 0 0px #1565c0;
+  }
 }
