--- a/_src/css/_global.css
+++ b/_src/css/_global.css
@@ -34,6 +34,7 @@
   --color-border: #eee;
   --color1: #1565C0;
   --color2: #999;
+  --title-font: Georgia,"Xin Gothic","PingFang TC","Hiragino Sans GB","Droid Sans Fallback","Microsoft YaHei",sans-serif;
 }
 
 html {
