--- a/_src/css/modules/_article.css
+++ b/_src/css/modules/_article.css
@@ -32,6 +32,7 @@
   color: var(--color2);
   text-decoration: none;
   &:hover {
+      transition:all 0.5s ease-in;
       color: var(--color-text);
       text-decoration: none;
     }
