--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,9 +31,7 @@
     <link rel="stylesheet" href="{{ site.basecss }}">
   {% else %}
     <style type="text/css">
-      {% include main.css %}
-      {% include css/songroger/index.css %}
-      {% include css/songroger/gff.css %}
+      {% include css/main.css %}
     </style>
   {% endif %}
 
