--- a/_src/css/modules/_blocks.css
+++ b/_src/css/modules/_blocks.css
@@ -16,8 +16,13 @@
   a {
     text-decoration: none;
     color: var(--color2);
+    border: 3px solid rgba(0,0,0,0.1);
+    border-radius: 20px;
+    padding: 1px 15px;
     &:hover {
       color: var(--color-text);
+      border-color: var(--color2);
+      transition: all .5s ease-in;
     }
   }
   .btn {
