--- a/_src/css/_fonts.css
+++ b/_src/css/_fonts.css
@@ -14,8 +14,8 @@
   font-style: italic;
   font-weight: 400;
   src: local('Source Sans Pro Italic'), local('SourceSansPro-It'),
-    url('../assets/sspi.woff2') format('woff2'),
-    url('../assets/sspi.woff') format('woff');
+    url('/assets/sspi.woff2') format('woff2'),
+    url('/assets/sspi.woff') format('woff');
 }
 
 /* source-sans-pro-700 - latin */
@@ -24,8 +24,8 @@
   font-style: normal;
   font-weight: 700;
   src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'),
-    url('../assets/sspb.woff2') format('woff2'),
-    url('../assets/sspb.woff') format('woff');
+    url('/assets/sspb.woff2') format('woff2'),
+    url('/assets/sspb.woff') format('woff');
 }
 
 /* source-code-pro-regular - latin */
@@ -34,6 +34,6 @@
   font-style: normal;
   font-weight: 400;
   src: local('Source Code Pro'), local('SourceCodePro-Regular'),
-    url('../assets/scr.woff2') format('woff2'),
-    url('../assets/scr.woff') format('woff');
+    url('/assets/scr.woff2') format('woff2'),
+    url('/assets/scr.woff') format('woff');
 }
