--- a/_src/css/_modules.css
+++ b/_src/css/_modules.css
@@ -4,3 +4,5 @@
 @import 'modules/_blocks.css';
 @import 'modules/_btn.css';
 @import 'modules/_backtop.css';
+@import 'modules/_archive.css';
+@import 'modules/_itemshow.css';
