--- a/_src/css/modules/_article.css
+++ b/_src/css/modules/_article.css
@@ -5,9 +5,9 @@
 
 .article__title {
   margin-bottom: .8rem;
-  font-size: 1.999rem;
+  /*font-size: 1.3rem;*/
   &--single {
-    font-size: 2rem;
+    /*font-size: 1.3rem;*/
     font-family: var(--title-font);
   }
 
