--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
 <script src="http://7xof48.com1.z0.glb.clouddn.com/songroger/top.js"></script>
 
 <!-- disqus 评论-->
-<!-- <div id="disqus_thread"></div>
+<div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'songroger'; // required: replace example with your forum shortname
@@ -52,13 +52,13 @@ layout: default
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 <!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="songroger" data-title="{{ page.title }}" data-url="{{ site.url }}{{ page.url }}"></div>
+<!-- <div class="ds-thread" data-thread-key="songroger" data-title="{{ page.title }}" data-url="{{ site.url }}{{ page.url }}"></div> -->
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 var duoshuoQuery = {short_name:"songroger"};
   (function() {
     var ds = document.createElement('script');
@@ -68,5 +68,5 @@ var duoshuoQuery = {short_name:"songroger"};
     (document.getElementsByTagName('head')[0] 
      || document.getElementsByTagName('body')[0]).appendChild(ds);
   })();
-  </script>
+  </script> -->
 <!-- 多说公共JS代码 end -->
