--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,12 +45,34 @@ layout: default
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'songroger'; // required: replace example with your forum shortname
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
+    function t() {
+        /* * * DON'T EDIT BELOW THIS LINE * * */
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
+    }
+    function e() {
+        var t = document.getElementById("disqus_thread");
+        t.innerHTML = "<h4>网络被限制, 无法加载Disqus</h4>";
+    }
+    function init() {
+        var xhr = new XMLHttpRequest;
+        xhr.open("GET", "https://disqus.com/next/config.json?" + +new Date, !0),
+        xhr.timeout = 1e3,
+        xhr.onload = function() {
+            t()
+        },
+        xhr.ontimeout = function() {
+            e(),
+            n.abort()
+        },
+        xhr.onerror = function() {
+            e()
+        },
+        xhr.send()
+    }
+    window.onload=init;
+
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
