--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
     }
     function e() {
         var t = document.getElementById("disqus_thread");
-        t.innerHTML = "<h4>网络被限制, 无法加载Disqus</h4>";
+        t.innerHTML = "<h4>您的网络被限制, 无法加载Disqus</h4>";
     }
     function init() {
         var xhr = new XMLHttpRequest;
