--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="songroger">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} - songroger.win</title>
 
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | xml_escape | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | xml_escape | strip_html | strip_newlines }}{% endif %}">
+  <meta name="description" content="{% if page.description %}{{ page.description | xml_escape | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | xml_escape | strip_html | strip_newlines }}{% endif %}">
+  <meta name="keywords" content="{% if page.keywords %}{{ page.keywords | xml_escape | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.keywords | xml_escape | strip_html | strip_newlines }}{% endif %}">
 
   <!-- Open graph data -->
   <meta property="og:site_name" content="{{ site.title }}">
@@ -17,8 +18,8 @@
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | xml_escape | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | xml_escape | strip_html | strip_newlines }}{% endif %}">
 
   <!-- Standard Stuff -->
-  <link rel="canonical" href="{% if page.title %}{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% else %}{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% endif %}"/>
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}"/>
+  <link rel="canonical" href="{% if page.title %}{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% else %}{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}{% endif %}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="{{ site.favicon }}">
