--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,15 +4,15 @@ layout: default
 
 <article class="article">
   <h2 class="article__title article__title--single">{{ page.title }}</h2>
-  <time class="article__date" datetime="{{ page.date | date: "%Y-%m-%d" }}">{% if page.author %}By {{ page.author}} on {% endif %}{{ page.date | date: " %H:%M %b.%d-%Y" }}</time>
+  <time class="article__date" datetime="{{ page.date | date: "%Y-%m-%d" }}">{% if page.author %}By {{ page.author}} on {% endif %}{{ page.date | date: "%b %d, %Y" }}</time>
   {% if page.cover %}
-    <div class="cover">
+    <div class="article__cover">
       <img src="{{ page.cover }}">
     </div>
   {% endif %}
   {{ content }}
   {% if page.tail %}
-    <div class="post-tags">{{ page.tail }}</div>
+    <div class="article__tail">{{ page.tail }}</div>
   {% endif %}
 </article>
 
