--- a/_src/css/modules/_article.css
+++ b/_src/css/modules/_article.css
@@ -1,10 +1,12 @@
 .article {
   margin-bottom: 1rem;
   animation: itemshow 0.9s linear;
+  border-bottom: 1px solid rgba(0,0,0,.04);
+  padding: 0px 0 20px;
 }
 
 .article__title {
-  margin-bottom: .8rem;
+  /*margin-bottom: .8rem;*/
   /*font-size: 1.3rem;*/
   &--single {
     /*font-size: 1.3rem;*/
@@ -15,10 +17,80 @@
     color: var(--color-text);
     font-family: var(--title-font);
     transition:all 0.25s ease-in;
+    padding-right: 10px;
 
     &:hover {
       color: var(--color2);
       text-decoration: none;
+    }
+  }
+
+}
+
+.article__cover_thumbnail {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    .article_cover_image {
+        flex-basis: 52%;
+        width: 52%;
+        box-sizing: border-box;
+        -ms-flex-preferred-size: 52%;
+        -webkit-box-sizing: border-box;
+        div {
+            /* background-color:  black; */
+            /* width: 52%; */
+            height: 0;
+            padding-bottom: 60%;
+            background: no-repeat 50%;
+            background-size: cover;
+            opacity: 1;
+            -webkit-transition: .3s ease-in-out;
+            transition: .3s ease-in-out;
+            &:hover {
+                opacity: .7;
+            }
+
+        }
+    }
+    .article_cover_desc {
+        width: 48%;
+        -ms-flex-preferred-size: 48%;
+        flex-basis: 48%;
+        padding-left: 40px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 734px) {
+  .article__cover_thumbnail {
+    display: block;
+    position: relative;
+    .article_cover_image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 1;
+        div {
+            padding-bottom: 0;
+            height: 100%;
+        }
+    }
+    .article_cover_desc {
+        position: relative;
+        color: var(--color-border);
+        width: 100%;
+        z-index: 2;
+        padding: 120px 40px 40px;
+        background-color: rgba(0,0,0,.42);
+        -webkit-transition: background-color .2s ease;
+        transition: background-color .2s ease;
+        &:hover {
+            background-color: rgba(0,0,0,.68);
+        }
     }
   }
 }
@@ -29,7 +101,7 @@
   font-size: .7501rem;
 }
 
-.cover {
+.article__cover {
   margin-bottom: 0.5rem;
   img {
     width: 100%
@@ -41,12 +113,13 @@
   text-decoration: none;
   &:hover {
       transition:all 0.5s ease-in;
+      -webkit-transition:all 0.5s ease-in;
       color: var(--color-text);
       text-decoration: none;
     }
 }
 
-.post-tags {
+.article__tail {
   text-align: right;
   text-decoration: none;
   font: italic bold 12px/30px Georgia, serif;
