--- a/_src/css/modules/_blocks.css
+++ b/_src/css/modules/_blocks.css
@@ -6,6 +6,10 @@
 
 .blocks--space {
   justify-content: space-between;
+  /*margin-top: 40px;*/
+  .align-right {
+    text-transform: uppercase;
+  }
 }
 
 .block__item--mr {
