change_desc_color

--- a/_src/css/_global.css
+++ b/_src/css/_global.css
@@ -32,6 +32,7 @@
 :root {
   --color-text: #444;
   --color-border: #eee;
+  --color-desc: #f9f8e9;
   --color1: #1565C0;
   --color2: #999;
   --title-font: Lora,Georgia,sans-serif;
