--- a/_src/css/modules/_article.css
+++ b/_src/css/modules/_article.css
@@ -1,6 +1,10 @@
 .article {
   margin-bottom: 1rem;
   animation: itemshow 0.9s linear;
+  -webkit-animation: itemshow 0.9s linear;
+  -moz-animation: itemshow 0.9s linear;
+  -ms-animation: itemshow 0.9s linear;
+  -o-animation: itemshow 0.9s linear;
   border-bottom: 1px solid rgba(0,0,0,.04);
   padding: 0px 0 20px;
 }
@@ -81,7 +85,7 @@
     }
     .article_cover_desc {
         position: relative;
-        color: var(--color-border);
+        color: var(--color-desc);
         width: 100%;
         z-index: 2;
         padding: 120px 40px 40px;
