fix:change_animation_compatible

--- a/_src/css/modules/_archive.css
+++ b/_src/css/modules/_archive.css
@@ -6,6 +6,8 @@
 .arch-item {
 	margin-bottom: 10px;
 	animation: itemshow 0.9s linear;
+    -webkit-animation: itemshow 0.9s linear;
+    -moz-animation: itemshow 0.9s linear;
 	li {
 		list-style-type: lower-greek;
 	}
