update:remove_jq_for_top

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,5 +2,7 @@
 layout: default
 ---
 
-<h2 class="article__title article__title--single">{{ page.title }}</h2>
+<div class="inner">
+  <h2 class="info_title">{{ page.title }}</h2>
+</div>
 {{ content }}
