--- a/_src/css/_syntax-highlighting.css
+++ b/_src/css/_syntax-highlighting.css
@@ -140,6 +140,10 @@ code {
     color: #008080;
   } /* Name.Attribute */
 
+  .n {
+    color: #55827f;
+  }
+
   .nb {
     color: #0086b3;
   } /* Name.Builtin */
