--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,14 @@
 
 {% include footer.html %}
 <script type="text/javascript">
+    document.getElementById("burger-id").addEventListener("click", function e() {
+      var d = document.getElementById("nav-id");
+      var e = document.getElementById("burger-id");
+      if (d.classList.contains('nav_active')){d.classList.remove('nav_active')} else {d.classList.add('nav_active')};
+      if (e.classList.contains('burger_active')){e.classList.remove('burger_active')} else {e.classList.add('burger_active')};
+    });
+</script>
+<script type="text/javascript">
   //友盟统计
   var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
   document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1260641879'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1260641879' type='text/javascript'%3E%3C/script%3E"));
