--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,55 @@
     });
 </script>
 <script type="text/javascript">
+    var object = document.getElementById('kiana-id'),
+    initX, initY, firstX, firstY;
+
+    object.addEventListener('mousedown', function(e) {
+
+        e.preventDefault();
+        initX = this.offsetLeft;
+        initY = this.offsetTop;
+        firstX = e.pageX;
+        firstY = e.pageY;
+
+        this.addEventListener('mousemove', dragIt, false);
+
+        window.addEventListener('mouseup', function() {
+            object.removeEventListener('mousemove', dragIt, false);
+        }, false);
+
+    }, false);
+
+    object.addEventListener('touchstart', function(e) {
+
+        e.preventDefault();
+        initX = this.offsetLeft;
+        initY = this.offsetTop;
+        var touch = e.touches;
+        firstX = touch[0].pageX;
+        firstY = touch[0].pageY;
+
+        this.addEventListener('touchmove', swipeIt, false);
+
+        window.addEventListener('touchend', function(e) {
+            e.preventDefault();
+            object.removeEventListener('touchmove', swipeIt, false);
+        }, false);
+
+    }, false);
+
+    function dragIt(e) {
+        this.style.left = initX+e.pageX-firstX + 'px';
+        this.style.top = initY+e.pageY-firstY + 'px';
+    }
+
+    function swipeIt(e) {
+        var contact = e.touches;
+        this.style.left = initX+contact[0].pageX-firstX + 'px';
+        this.style.top = initY+contact[0].pageY-firstY + 'px';
+    }
+</script>
+<script type="text/javascript">
   //友盟统计
   var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
   document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1260641879'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1260641879' type='text/javascript'%3E%3C/script%3E"));
